# tensorflow-cmake

./: CMakeLists.txt  Readme.md  conanfile.py  tf_core_platform.cmake
test_package/: conanfile.py
